# Meu_Portfolio

./: README.md  app.py  config.py  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
