[tool.poetry]
name = "meu_portfolio"
version = "0.1.0"
description = ""
authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-Mail = "^0.9.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
